# entari-cli

./: Dockerfile  README.md  main.py  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: auto-merge.yml  clean-image.yml  docker.yml
src/entari_cli/: __init__.py  __main__.py  config.py  consts.py  process.py  project.py  py_info.py  python.py  setting.py  template.py  utils.py  venv.py
src/entari_cli/commands/: adapter.py  add.py  generate.py  init.py  new.py  remove.py  run.py  setting.py
src/entari_cli/commands/config/: __init__.py  path.py
src/entari_cli/config/: file.py
src/entari_cli/i18n/: .lang.schema.json  .template.json  en-US.json  model.py  zh-CN.json
